Backfill missing TL;DR across java and react question sets
TL;DR was added to the contract after these 10 files (java 01-05, react
01-05) were already generated, so they were missing it. Adds one distilled
sentence per question, synthesized from each question's existing verified
Good answer/Follow-up good answer — no new claims introduced.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01E7xXRJQUvpzEmTSDvbksSP